src/test/deca/context/valid/created/testPass2/multiplDecl.deca
class A{
    void setX(){}
    int x;
    float y;
    void setY(){}

}
class B extends A{
    int x;
    int y;
    void setY(){}
}