src/test/deca/context/invalid/created/testPass2/redefMethWrongSign.deca
class A{
    void setX(){}
}
class B extends A{
    void setX(int x)
}